###Copyright (C) 2021 Vincent Torri <vincent dot torri at gmail dot com
###This code is public domain and can be freely used or copied.

MAINTAINERCLEANFILES = Makefile.in

### libdwarfstrin

noinst_LTLIBRARIES = libdwarfstring.la

libdwarfstring_la_SOURCES = \
dwarfstring.c \
dwarfstring.h

libdwarfstring_la_CPPFLAGS = -I$(top_srcdir)/src/lib/libdwarf
