###Copyright (C) 2021 Vincent Torri <vincent dot torri at gmail dot com
###This code is public domain and can be freely used or copied.

MAINTAINERCLEANFILES = Makefile.in

### libdwarftsearch

noinst_LTLIBRARIES = libdwarftsearch.la

libdwarftsearch_la_SOURCES = \
dwarf_tsearchhash.c \
dwarf_tsearch.h

libdwarftsearch_la_CPPFLAGS = -I$(top_srcdir)/src/lib/libdwarf
